<resources>

    <!-- Manifest -->
    <string name="app_name" translatable="false">Go4Lunch</string>
    <string name="manifest_web_view_activity_label">Restaurant Web Site</string>

    <!-- Common TEXT -->
    <string name="common_not_network">Not Network Connection</string>

    <!-- Main ACTIVITY -->
    <string name="main_activity_description">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="facebook_login">Sign in with Facebook</string>
    <string name="twitter_login">Sign in with Twitter</string>
    <string name="google_login">Sign in with Google</string>
    <string name="error_not_connected">You need to log in !</string>
    <string name="error_authentication_canceled">Authentication canceled&#8230;</string>
    <string name="error_no_internet">No Internet connection !</string>
    <string name="error_provider">Provider error !</string>
    <string name="error_unknown_error">An unknown error occurred&#8230;</string>
    <string name="connection_succeed">Successful authentication !</string>
    <string name="button_login_text_logged">View Profile</string>
    <string name="button_login_text_not_logged">Connection</string>

    <!-- Settings ACTIVITY -->
    <string name="restaurant_not_chosen">No restaurant has been chosen yet</string>
    <string name="settings_activity_validation_text_button">Validation</string>
    <string name="settings_activity_search_radius_text_2">meters</string>
    <string name="settings_activity_search_radius_text_1">"Search Radius ( 1 at 1500 ) : "</string>
    <string name="settings_activity_delete_account">DELETE ACCOUNT</string>
    <string name="settings_activity_sort_by">Sort the list of restaurants by :</string>
    <string name="settings_activity_sort_by_name">Name</string>
    <string name="settings_activity_sort_by_distance">Distance</string>
    <string name="settings_activity_sort_by_nbr_likes">Nbr Likes</string>
    <string name="settings_activity_sort_by_nbr_participants">Nbr Participants</string>

    <!-- Welcome ACTIVITY -->
    <string name="welcome_activity_download_progress">Searching Restaurants...</string>
    <string name="welcome_activity_download_finish">Search Complete.</string>

    <!-- ... Bottom Navigation view -->
    <string name="bottom_navigation_menu_map_view">Map View</string>
    <string name="bottom_navigation_menu_list_view">List View</string>
    <string name="bottom_navigation_menu_workmates">Workmates</string>
    <string name="activity_welcome_title">l\'m Hungry!</string>

    <!-- Restaurant Card ACTIVITY -->
    <string name="activity_restaurant_card_name_of_the_restaurant">NAME OF THE RESTAURANT</string>
    <string name="activity_restaurant_card_address_of_the_restaurant">Address of the restaurant</string>
    <string name="activity_restaurant_card_call">CALL</string>
    <string name="activity_restaurant_card_like">LIKE</string>
    <string name="activity_restaurant_card_website">WEBSITE</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_drawer_your_lunch">YOUR LUNCH</string>
    <string name="menu_drawer_settings">SETTINGS</string>
    <string name="menu_drawer_logout">LOGOUT</string>
    <string name="toolbar_search">Search</string>
    <!-- Used in NavigationHeader -->
    <string name="navigation_header_user_name">no user name found</string>
    <string name="navigation_header_user_email">no user email found</string>
    <string name="activity_welcome_nav_header_user_name">User Name</string>
    <string name="activity_welcome_nav_header_email">email</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name">"FireBase Channel"</string>
    <string name="notification_title">"You have received a notification"</string>
    <string name="notification_message_title">"Do not forget your lunch"</string>
    <string name="notification_message_1">We remind you that you have decided to have lunch</string>
    <string name="notification_message_2">At : </string>
    <string name="notification_message_3">To the following address : </string>
    <string name="notification_message_4">With :</string>
    <string name="activity_settings_notification_label">Remember your lunch at 12h</string>

    <!-- List Restaurants RecyclerView -->
    <string name="fragment_list_restaurants_view_item_restaurant_name">restaurant name</string>
    <string name="fragment_list_restaurants_view_item_address">address</string>
    <string name="fragment_list_restaurants_view_item_not_opening_hours">not opening hours</string>
    <string name="list_restaurant_text_1">Closed</string>
    <string name="list_restaurant_text_3">"Open until "</string>
    <string name="list_restaurant_text_4">pm</string>
    <string name="list_restaurant_text_5">am</string>
    <string name="notification_message_6">Open until 24/24</string>

    <!-- List Workmates RecyclerView -->
    <string name="fragment_list_workmates_view_item_workmates_hasn_t_decided_yet">Workmates hasn\'t decided yet</string>
    <string name="workmates_list_text_1">" is eating at ("</string>
    <string name="workmates_list_text_2"> hasn\'t decided yet</string>
    <string name="workmates_list_text_3"> is joining</string>

    <!-- AutoComplete Search a Restaurant -->
    <string name="autocomplete_hint_search_a_restaurant">Search a Restaurant</string>


</resources>
