<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_settings_coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Toolbar Importation -->
        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Switch
            android:id="@+id/activity_settings_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bottom_margin"
            android:textSize="16sp"
            android:layout_marginEnd="@dimen/bottom_margin"
            android:layout_marginTop="@dimen/bottom_margin"
            android:text="@string/activity_settings_notification_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/bottom_margin"
                android:textSize="16sp"
                android:text="@string/settings_activity_search_radius_text_1"/>

            <EditText
                android:id="@+id/activity_settings_radius_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="numberDecimal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginStart="@dimen/bottom_margin"
                android:textSize="16sp"
                android:text="@string/settings_activity_search_radius_text_2"/>
        </LinearLayout>

        <!-- VALIDATE Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/activity_settings_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin_top"
                android:text="@string/settings_activity_validation_text_button">
            </Button>
        </LinearLayout>

        <!-- DELETE BUTTON -->
        <Button
            android:id="@+id/activity_settings_delete_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginEnd="@dimen/end_margin"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:text="DELETE ACCOUNT"
            android:textAlignment="center"
            android:textStyle="normal"
            android:background="@android:color/holo_red_dark"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_button" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>

