<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.sagot.go4lunch.Controllers.Activities.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- BACKGROUND PICTURE -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleX="2.2"
            android:scaleY="1"
            android:gravity="center"
            android:background="@drawable/pic_restaurant"/>

        <!-- MAIN CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:background="@color/alpha_grey"
            android:orientation="vertical">

            <!-- IMAGE VIEW LOGO GO4LUNCH -->
            <ImageView
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:background="@drawable/pic_logo_go4lunch_512x512"
                android:layout_marginTop="@dimen/logo_top_margin"/>

            <!-- TITLE GO4LUNCH -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>

            <!-- DESCRIPTION GO4LUNCH  -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_description"
                android:text="@string/main_activity_description"
                android:textStyle="italic"
                android:textColor="@android:color/white"/>

            <!-- BUTTONS CONTAINER -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <!-- BUTTON FACEBOOK LOGIN -->
                <Button
                    android:id="@+id/main_activity_facebook_login_button"
                    style="@style/FirebaseUI.Button.AccountChooser.FacebookButton"
                    android:background="@drawable/button_facebook_radius_primary_color"
                    android:layout_marginStart="@dimen/start_margin"
                    android:layout_marginEnd="@dimen/end_margin"
                    android:layout_marginBottom="@dimen/bottom_margin"
                    android:drawableLeft="@drawable/ic_facebook"
                    android:text="@string/facebook_login"
                    android:textAlignment="center"
                    android:textStyle="normal"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_button" />

                <!-- BUTTON GOOGLE LOGIN -->
                <Button
                    android:id="@+id/main_activity_google_login_button"
                    style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
                    android:background="@drawable/button_google_radius_primary_color"
                    android:layout_marginTop="@dimen/top_margin"
                    android:layout_marginStart="@dimen/start_margin"
                    android:layout_marginEnd="@dimen/end_margin"
                    android:drawableLeft="@drawable/ic_google_plus"
                    android:text="@string/google_login"
                    android:textAlignment="center"
                    android:textStyle="normal"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_button" />

            </LinearLayout>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
