<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_restaurant_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.Activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Restaurant Card Top -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">

            <!-- Restaurant Image -->
            <ImageView
                android:id="@+id/activity_restaurant_card_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/pic_restaurant"
                android:scaleType="centerCrop"
                android:layout_weight="0.2"/>

            <!-- Restaurant Details -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/colorPrimary"
                android:layout_weight="0.6">

                <!-- Restaurant Name + Stars -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large_margin"
                    android:layout_marginStart="@dimen/card_start_margin"
                    android:orientation="horizontal">

                    <!-- Restaurant Name -->
                    <TextView
                        android:id="@+id/activity_restaurant_card_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/card_align_margin"
                        android:textColor="@android:color/white"
                        android:text="@string/activity_restaurant_card_name_of_the_restaurant"/>

                    <!-- Star 1 -->
                    <ImageView
                        android:id="@+id/activity_restaurant_card_star_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_marginLeft="@dimen/top_margin"
                        android:backgroundTint="@color/stars"
                        android:background="@drawable/baseline_star_black_24"/>

                    <!-- Star 2 -->
                    <ImageView
                        android:id="@+id/activity_restaurant_card_star_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:backgroundTint="@color/stars"
                        android:background="@drawable/baseline_star_black_24"/>

                    <!-- Star 3 -->
                    <ImageView
                        android:id="@+id/activity_restaurant_card_star_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:backgroundTint="@color/stars"
                        android:background="@drawable/baseline_star_black_24"/>

                </LinearLayout>

                <!-- Restaurant Address -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_top_margin"
                    android:layout_marginStart="@dimen/card_start_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/activity_restaurant_card_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="@string/activity_restaurant_card_address_of_the_restaurant"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!-- Restaurant Card Bottom -->
        <LinearLayout
            android:id="@+id/activity_restaurant_card_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">

            <!-- Options Bar -->
            <LinearLayout
                android:id="@+id/activity_restaurant_card_option_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/top_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:orientation="vertical">

                        <!-- Restaurant Call -->
                        <ImageButton
                            android:id="@+id/activity_restaurant_call_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorPrimary"
                            android:background="@drawable/baseline_call_black_24"/>

                        <TextView
                            android:id="@+id/activity_restaurant_call_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/top_margin"
                            android:layout_marginBottom="@dimen/top_margin"
                            android:text="@string/activity_restaurant_card_call"
                            android:textColor="@color/colorPrimary"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:orientation="vertical">

                        <!-- Like Restaurant -->
                        <ImageButton
                            android:id="@+id/activity_restaurant_like_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorPrimary"
                            android:background="@drawable/baseline_star_border_black_24"/>

                        <TextView
                            android:id="@+id/activity_restaurant_like_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/top_margin"
                            android:layout_marginBottom="@dimen/top_margin"
                            android:text="@string/activity_restaurant_card_like"
                            android:textColor="@color/colorPrimary"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:orientation="vertical">

                        <!-- Restaurant Web Site -->
                        <ImageButton
                            android:id="@+id/activity_restaurant_web_site_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorPrimary"
                            android:background="@drawable/sharp_public_black_24"/>

                        <TextView
                            android:id="@+id/activity_restaurant_web_site_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/top_margin"
                            android:layout_marginBottom="@dimen/top_margin"
                            android:text="@string/activity_restaurant_card_website"
                            android:textColor="@color/colorPrimary"/>

                </LinearLayout>

            </LinearLayout>

            <!-- College List -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/activity_restaurant_workmates_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_restaurant_floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/no_verified_x96"
        app:fabSize="auto"
        app:maxImageSize="@dimen/card_fab_image_size"
        app:backgroundTint="@android:color/white"
        app:layout_anchor="@id/activity_restaurant_card_image"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>